fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,9 @@ section {
     white-space: nowrap;
 }
 
+#date {
+    margin-top: -50px;
+}
 
 #logo {
     left: 50%;
